# CRUD-API

./: README.md  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/crud/produto/: crud.py
backend/routes/: routes_produto.py
